--- a/application/public/stylesheets/salesItem.css
+++ b/application/public/stylesheets/salesItem.css
@@ -32,8 +32,6 @@
 }
 
 .itemContainer .featured_text p.seller {
-    font-size: 17px;
-    font-weight: 300;
     margin-bottom: 20px;
 }
 
@@ -41,10 +39,12 @@
     color: #811b1b;
     font-size: 26px;
     font-weight: 500;
+    margin-bottom: 20px;
 }
 
 .itemContainer .featured_text ul.brief_description {
-    padding: 15px;
+    padding: 0;
+    list-style-type: none;
 }
 
 .itemContainer .pickup_map {
@@ -81,8 +81,8 @@
     display: block;
     margin-top: 10px;
     margin-bottom: 10px;
-    left: 40px;
-    width: calc(100% - 80px);
+    left: 20px;
+    width: calc(100% - 40px);
     height: 3px;
     background: lightgray;
 }
@@ -101,8 +101,4 @@
     font-weight: 450;
     line-height: 25px;
     font-size: 16px;
-}
-
-.description {
-    white-space: pre-line;
 }
